@@ -240,7 +240,7 @@ public class SQLQueryConnectionDummyContext extends SQLQueryConnectionContext {
         public void cacheStructure(@NotNull DBRProgressMonitor monitor, int scope) throws DBException {
         }
 
-        @Nullable
+        @NotNull
         @Override
         public DBSInstance getDefaultInstance() {
             return null;
@@ -257,22 +257,23 @@ public class SQLQueryConnectionDummyContext extends SQLQueryConnectionContext {
 
         }
 
+        @NotNull
         @Override
         public Map<String, ?> getContextAttributes() {
             return Collections.emptyMap();
         }
 
         @Override
-        public <T> T getContextAttribute(String attributeName) {
+        public <T> T getContextAttribute(@NotNull String attributeName) {
             return null;
         }
 
         @Override
-        public <T> void setContextAttribute(String attributeName, T attributeValue) {
+        public <T> void setContextAttribute(@NotNull String attributeName, @Nullable T attributeValue) {
         }
 
         @Override
-        public void removeContextAttribute(String attributeName) {
+        public void removeContextAttribute(@NotNull String attributeName) {
         }
 
         @NotNull
@@ -423,31 +424,44 @@ public class SQLQueryConnectionDummyContext extends SQLQueryConnectionContext {
     @NotNull
     @Override
     public List<DBSEntity> findRealTables(@NotNull DBRProgressMonitor monitor, @NotNull List<String> tableName) {
-        return List.of(this.getOrPrepareDummyTable(tableName));
+        DBSEntity table = this.getOrPrepareDummyTable(tableName);
+        return table != null ? List.of(table) : Collections.emptyList();
     }
 
-    @NotNull
+    @Nullable
     private DBSEntity getOrPrepareDummyTable(@NotNull List<String> tableName) {
-        List<String> rawTableName = tableName.stream().map(this.dialect::getUnquotedIdentifier).toList();
+        List<String> rawTableName = tableName.stream().map(s -> s == null ? null : this.dialect.getUnquotedIdentifier(s)).toList();
         DummyDbObject container = this.dummyDataSource;
 
         // create catalogs
         for (int i = 0; i < rawTableName.size() - 2; i++) {
             DummyDbObject catalog = container;
             Map<String, DummyDbObject> children  = catalog.getChildrenMapImpl();
-            container = children.computeIfAbsent(rawTableName.get(i), k -> prepareCatalog(catalog, k, children.size()));
+            String namePart = rawTableName.get(i);
+            if (namePart == null) {
+                return null;
+            }
+            container = children.computeIfAbsent(namePart, k -> prepareCatalog(catalog, k, children.size()));
         }
         // create schema
         if (rawTableName.size() > 1) {
             DummyDbObject catalog = container;
             Map<String, DummyDbObject> children  = catalog.getChildrenMapImpl();
-            container = children.computeIfAbsent(rawTableName.get(rawTableName.size() - 2), k -> prepareSchema(catalog, k, children.size()));
+            String namePart = rawTableName.get(rawTableName.size() - 2);
+            if (namePart == null) {
+                return null;
+            }
+            container = children.computeIfAbsent(namePart, k -> prepareSchema(catalog, k, children.size()));
         }
         // create table
         {
             DummyDbObject schema = container;
             Map<String, DummyDbObject> children  = schema.getChildrenMapImpl();
-            return children.computeIfAbsent(rawTableName.get(rawTableName.size() - 1), k -> prepareTable(schema, k, children.size()));
+            String namePart = rawTableName.get(rawTableName.size() - 1);
+            if (namePart == null) {
+                return null;
+            }
+            return children.computeIfAbsent(namePart, k -> prepareTable(schema, k, children.size()));
         }
     }
 
@@ -461,5 +475,11 @@ public class SQLQueryConnectionDummyContext extends SQLQueryConnectionContext {
     @Override
     public SQLQueryResultPseudoColumn resolveGlobalPseudoColumn(@NotNull String name) {
         return null;
+    }
+
+    @NotNull
+    @Override
+    public Collection<SQLQueryResultPseudoColumn> getGlobalPseudoColumns() {
+        return Collections.emptyList();
     }
 }
